# breachfinder-chrisapp

./: .dockerignore  .gitignore  app.py  pyproject.toml
.github/workflows/: typecheck.yml
src/: breach_viewer_base.py  breachfinder.py  breachviewer_base.py  correction_viewer.py  utils.py  widget.py
src/data/: constants.py
src/widgets/: controls.py  correction_viewer.py  freeview_viewer.py  multiple_viewer_widget.py  ortho_viewer.py  viewer_buttons.py
